--- a/src/pages/dashbord/dashbord.css
+++ b/src/pages/dashbord/dashbord.css
@@ -327,14 +327,14 @@ input[type="file"] {
   margin-bottom: 10px;
 }
 
-input[type="email"] {
+/* input[type="email"] {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
   border: 1px solid #ddd;
   font-size: 14px;
-}
+} */
 
 .search-results {
   margin-bottom: 20px;
