--- a/src/pages/dashbord/dashbord.css
+++ b/src/pages/dashbord/dashbord.css
@@ -394,7 +394,7 @@ input[type="file"] {
   /* Sent messages on the left */
 }
 
-p {
+.right-overlay-panel-p {
   padding: 5px 10px;
   border-radius: 8px;
   background-color: #f1f1f1;
